ghc/compiler/tests/typecheck/should_fail/tcfail013.hs
module ShouldFail where

f [] = 1
f True = 2
